Add a line showing that we can use CIDR notation.
patch by jsmith, after discussion with jtodd


git-svn-id: http://svn.asterisk.org/svn/asterisk/branches/1.4@235181 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/configs/sip.conf.sample
+++ b/configs/sip.conf.sample
@@ -704,6 +704,7 @@ srvlookup=yes                   ; Enable DNS SRV lookups on outbound calls
 ;defaultip=192.168.0.60         ; IP address to use if peer has not registered
 ;deny=0.0.0.0/0.0.0.0           ; ACL: Control access to this account based on IP address
 ;permit=192.168.0.60/255.255.255.0
+;permit=192.168.0.60/24          ; we can also use CIDR notation for subnet masks
 
 ;[cisco1]
 ;type=friend
