Add auth_policy option to jabber.conf for auto user registration.
The option is global and currently the acceptable values as noted in the sample
config are accept or deny.

(closes issue #15228)
Reported by: lp0


git-svn-id: http://svn.asterisk.org/svn/asterisk/trunk@235342 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/configs/jabber.conf.sample
+++ b/configs/jabber.conf.sample
@@ -4,6 +4,9 @@
 					;;setup (ie, using your personal Gtalk account for a test)
 					;;you might lose your contacts list. Default is 'no'.
 ;autoregister=yes			;;Auto register users from buddy list.
+;auth_policy=accept			;;Auto accept users' subscription requests (default).
+							;;Set to deny for auto denial.
+
 
 ;[asterisk]				;;label
 ;type=client				;;Client or Component connection
