1. Updated for OSP Toolkit 3.6.0. 2. Added service type ported number query. 3. Formated code.
git-svn-id: http://svn.asterisk.org/svn/asterisk/trunk@236756 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/configs/osp.conf.sample
+++ b/configs/osp.conf.sample
@@ -101,3 +101,10 @@
 ; IAX protocols.  The default protocol is set to SIP.
 ;
 ;defaultprotocol=SIP
+;
+; Set the service type.
+; 0 - Normal voice service
+; 1 - Ported number query service
+; Default is 0,
+;
+;servicetype=0
