Permit dates and times to be stored in timezones other than the default (typically, UTC) (closes issue #16401)  Reported by: lordmortis
git-svn-id: http://svn.asterisk.org/svn/asterisk/trunk@239152 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/configs/cdr_mysql.conf.sample
+++ b/configs/cdr_mysql.conf.sample
@@ -18,6 +18,7 @@
 ;user=asteriskcdruser
 ;port=3306
 ;sock=/tmp/mysql.sock
+;timezone=UTC ; Previously called usegmtime
 ;
 ; If your system's locale differs from mysql database character set,
 ; cdr_mysql can damage non-latin characters in CDR variables. Use this
