--- a/configs/sip.conf.sample
+++ b/configs/sip.conf.sample
@@ -762,7 +762,7 @@ srvlookup=yes                   ; Enable DNS SRV lookups on outbound calls
                                 ; purpose of setting up a direct media path. If a reINVITE is
                                 ; needed to switch a media stream to inactive (when placed on
                                 ; hold) or to T.38, it will still be done, regardless of this 
-                                ; setting.
+                                ; setting. Note that direct T.38 is not supported.
 
 ;directmedia=nonat              ; An additional option is to allow media path redirection
                                 ; (reinvite) but only when the peer where the media is being
