Code previously added to ast_expr2f.c warranted a change in the source file ast_expr2.fl. Also, made a Makefile change to ensure that the expression parser C source files get regenerated correctly, when we need that to happen.
git-svn-id: http://svn.asterisk.org/svn/asterisk/trunk@239797 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/main/Makefile
+++ b/main/Makefile
@@ -17,7 +17,8 @@ all: asterisk
 
 include $(ASTTOPDIR)/Makefile.moddir_rules
 
-SRC=$(wildcard *.c)
+# Must include the extra ast_expr2.c, ast_expr2f.c, in case they need to be regenerated (because to force regeneration, we delete them)
+SRC=$(wildcard *.c) ast_expr2.c ast_expr2f.c
 OBJSFILTER=fskmodem_int.o fskmodem_float.o cygload.o buildinfo.o
 OBJS=$(filter-out $(OBJSFILTER),$(SRC:.c=.o))
 
