Fix configure check for PTHREAD_ONCE_INIT when manually adding -Wall to CFLAGS.
(closes issue #16666)
Reported by: romain_proformatique


git-svn-id: http://svn.asterisk.org/svn/asterisk/branches/1.4@241932 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/configure.ac
+++ b/configure.ac
@@ -357,8 +357,9 @@ saved_CFLAGS="${CFLAGS}"
 CFLAGS="${CFLAGS} -Werror -Wmissing-braces"
 AC_COMPILE_IFELSE(
   [AC_LANG_PROGRAM(
-    [#include <pthread.h>],
-	[pthread_once_t once = PTHREAD_ONCE_INIT;])
+    [#include <pthread.h>
+     void empty(){}],
+	[pthread_once_t once = PTHREAD_ONCE_INIT; pthread_once(&once, empty);])
   ],[
     AC_MSG_RESULT(no)
     ac_cv_pthread_once_needsbraces="no"
