Only rebuild bison and flex source files on demand, if bison and flex are detected by the configure script.
Changed after discussion on the -dev list about possible unnecessary build
failures, due to checkouts/untars causing these special source files to
possibly be newer than their resulting C files.  This should additionally
ensure that nobody need learn about extra Makefile arguments to ensure the
proper files get rebuilt when changes are made to these special source files.


git-svn-id: http://svn.asterisk.org/svn/asterisk/branches/1.4@242520 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/configure.ac
+++ b/configure.ac
@@ -142,6 +142,8 @@ fi
 AC_SUBST(GNU_LD)
 
 AC_PATH_PROG([AWK], [awk], :)
+AC_PATH_PROG([BISON], [bison], :)
+AC_PATH_PROG([FLEX], [flex], :)
 AC_PATH_PROG([GREP], [grep], :)
 AC_PATH_PROG([FIND], [find], :)
 AC_PATH_PROG([COMPRESS], [compress], :)
