--- a/pbx/Makefile
+++ b/pbx/Makefile
@@ -9,7 +9,7 @@
 # the GNU General Public License
 #
 
--include ../menuselect.makeopts ../menuselect.makedeps
+-include ../menuselect.makeopts ../menuselect.makedeps ../makeopts
 
 MENUSELECT_CATEGORY=PBX
 MENUSELECT_DESCRIPTION=PBX Modules
@@ -44,14 +44,22 @@ ael/ael.tab.o ael/ael_lex.o: _ASTCFLAGS+=$(MENUSELECT_OPTS_pbx_ael:%=-D%) $(fore
 
 $(if $(filter pbx_ael,$(EMBEDDED_MODS)),modules.link,pbx_ael.so): ael/ael.tab.o ael/ael_lex.o
 
+ifneq ($(FLEX),)
 ael/ael_lex.c: ael/ael.flex
+else
+ael/ael_lex.c:
+endif
 	$(ECHO_PREFIX) echo "   [FLEX] $< -> $@"
-	(cd ael; flex ael.flex; sed -i -e "/begin standard C headers/i#include \"asterisk.h\"" ael_lex.c)
-	(cd ael; sed 's@#if __STDC_VERSION__ >= 199901L@#if !defined __STDC_VERSION__ || __STDC_VERSION__ >= 199901L@' ael_lex.c > zz; mv zz ael_lex.c)
+	$(ECHO_PREFIX) (cd ael; flex ael.flex; sed -i -e "/begin standard C headers/i#include \"asterisk.h\"" ael_lex.c)
+	$(ECHO_PREFIX) (cd ael; sed 's@#if __STDC_VERSION__ >= 199901L@#if !defined __STDC_VERSION__ || __STDC_VERSION__ >= 199901L@' ael_lex.c > zz; mv zz ael_lex.c)
 
+ifneq ($(BISON),)
 ael/ael.tab.c ael/ael.tab.h: ael/ael.y
+else
+ael/ael.tab.c ael/ael.tab.h:
+endif
 	$(ECHO_PREFIX) echo "   [BISON] $< -> $@"
-	(cd ael; bison -v -d ael.y)
+	$(ECHO_PREFIX) (cd ael; bison -v -d ael.y)
 
 dundi-parser.o: dundi-parser.h
 dundi-parser.o: _ASTCFLAGS+=-I.
