Make the build of the Asterisk expression parser match that of the AEL parser.
git-svn-id: http://svn.asterisk.org/svn/asterisk/branches/1.4@242683 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/main/Makefile
+++ b/main/Makefile
@@ -11,7 +11,7 @@
 # the GNU General Public License
 #
 
--include $(ASTTOPDIR)/menuselect.makeopts $(ASTTOPDIR)/menuselect.makedeps $(ASTTOPDIR)/makeopts.embed_rules
+-include $(ASTTOPDIR)/menuselect.makeopts $(ASTTOPDIR)/menuselect.makedeps $(ASTTOPDIR)/makeopts.embed_rules $(ASTTOPDIR)/makeopts
 
 all: asterisk
 
@@ -95,13 +95,23 @@ editline/libedit.a:
 db1-ast/libdb1.a:
 	_ASTCFLAGS="$(_ASTCFLAGS)" ASTCFLAGS="$(ASTCFLAGS) -Wno-strict-aliasing" $(MAKE) -C db1-ast libdb1.a
 
+ifneq ($(BISON),)
+ast_expr2.c ast_expr2.h: ast_expr2.y
+else
 ast_expr2.c ast_expr2.h:
-	bison -o $@ -d --name-prefix=ast_yy ast_expr2.y
+endif
+	$(ECHO_PREFIX) echo "   [BISON] $< -> $@"
+	$(ECHO_PREFIX) bison -o $@ -d --name-prefix=ast_yy ast_expr2.y
 
+ifneq ($(FLEX),)
+ast_expr2f.c: ast_expr2.fl
+else
 ast_expr2f.c:
-	flex -o $@ ast_expr2.fl # moved the correction of yyfree into the flex input file itself.
-	sed 's@#if __STDC_VERSION__ >= 199901L@#if !defined __STDC_VERSION__ || __STDC_VERSION__ >= 199901L@' ast_expr2f.c > zz
-	mv zz ast_expr2f.c
+endif
+	$(ECHO_PREFIX) echo "   [FLEX] $< -> $@"
+	$(ECHO_PREFIX) flex -o $@ ast_expr2.fl # moved the correction of yyfree into the flex input file itself.
+	$(ECHO_PREFIX) sed 's@#if __STDC_VERSION__ >= 199901L@#if !defined __STDC_VERSION__ || __STDC_VERSION__ >= 199901L@' ast_expr2f.c > zz
+	$(ECHO_PREFIX) mv zz ast_expr2f.c
 
 ast_expr2f.o: _ASTCFLAGS+=-Wno-unused
 
