Oops, should have used CMD_PREFIX, not ECHO_PREFIX, for the commands.
git-svn-id: http://svn.asterisk.org/svn/asterisk/branches/1.4@242723 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/main/Makefile
+++ b/main/Makefile
@@ -101,7 +101,7 @@ else
 ast_expr2.c ast_expr2.h:
 endif
 	$(ECHO_PREFIX) echo "   [BISON] $< -> $@"
-	$(ECHO_PREFIX) bison -o $@ -d --name-prefix=ast_yy ast_expr2.y
+	$(CMD_PREFIX) bison -o $@ -d --name-prefix=ast_yy ast_expr2.y
 
 ifneq ($(FLEX),)
 ast_expr2f.c: ast_expr2.fl
@@ -109,9 +109,9 @@ else
 ast_expr2f.c:
 endif
 	$(ECHO_PREFIX) echo "   [FLEX] $< -> $@"
-	$(ECHO_PREFIX) flex -o $@ ast_expr2.fl # moved the correction of yyfree into the flex input file itself.
-	$(ECHO_PREFIX) sed 's@#if __STDC_VERSION__ >= 199901L@#if !defined __STDC_VERSION__ || __STDC_VERSION__ >= 199901L@' ast_expr2f.c > zz
-	$(ECHO_PREFIX) mv zz ast_expr2f.c
+	$(CMD_PREFIX) flex -o $@ ast_expr2.fl # moved the correction of yyfree into the flex input file itself.
+	$(CMD_PREFIX) sed 's@#if __STDC_VERSION__ >= 199901L@#if !defined __STDC_VERSION__ || __STDC_VERSION__ >= 199901L@' ast_expr2f.c > zz
+	$(CMD_PREFIX) mv zz ast_expr2f.c
 
 ast_expr2f.o: _ASTCFLAGS+=-Wno-unused
 
