--- a/pbx/Makefile
+++ b/pbx/Makefile
@@ -50,8 +50,8 @@ else
 ael/ael_lex.c:
 endif
 	$(ECHO_PREFIX) echo "   [FLEX] $< -> $@"
-	$(ECHO_PREFIX) (cd ael; flex ael.flex; sed -i -e "/begin standard C headers/i#include \"asterisk.h\"" ael_lex.c)
-	$(ECHO_PREFIX) (cd ael; sed 's@#if __STDC_VERSION__ >= 199901L@#if !defined __STDC_VERSION__ || __STDC_VERSION__ >= 199901L@' ael_lex.c > zz; mv zz ael_lex.c)
+	$(CMD_PREFIX) (cd ael; flex ael.flex; sed -i -e "/begin standard C headers/i#include \"asterisk.h\"" ael_lex.c)
+	$(CMD_PREFIX) (cd ael; sed 's@#if __STDC_VERSION__ >= 199901L@#if !defined __STDC_VERSION__ || __STDC_VERSION__ >= 199901L@' ael_lex.c > zz; mv zz ael_lex.c)
 
 ifneq ($(BISON),)
 ael/ael.tab.c ael/ael.tab.h: ael/ael.y
@@ -59,7 +59,7 @@ else
 ael/ael.tab.c ael/ael.tab.h:
 endif
 	$(ECHO_PREFIX) echo "   [BISON] $< -> $@"
-	$(ECHO_PREFIX) (cd ael; bison -v -d ael.y)
+	$(CMD_PREFIX) (cd ael; bison -v -d ael.y)
 
 dundi-parser.o: dundi-parser.h
 dundi-parser.o: _ASTCFLAGS+=-I.
