Buildbot pointed out an error (thanks, buildbot!)
git-svn-id: http://svn.asterisk.org/svn/asterisk/branches/1.4@242728 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/main/Makefile
+++ b/main/Makefile
@@ -95,21 +95,21 @@ editline/libedit.a:
 db1-ast/libdb1.a:
 	_ASTCFLAGS="$(_ASTCFLAGS)" ASTCFLAGS="$(ASTCFLAGS) -Wno-strict-aliasing" $(MAKE) -C db1-ast libdb1.a
 
-ifneq ($(BISON),)
+ifneq ($(BISON),:)
 ast_expr2.c ast_expr2.h: ast_expr2.y
 else
 ast_expr2.c ast_expr2.h:
 endif
 	$(ECHO_PREFIX) echo "   [BISON] $< -> $@"
-	$(CMD_PREFIX) bison -o $@ -d --name-prefix=ast_yy ast_expr2.y
+	$(CMD_PREFIX) $(BISON) -o $@ -d --name-prefix=ast_yy ast_expr2.y
 
-ifneq ($(FLEX),)
+ifneq ($(FLEX),:)
 ast_expr2f.c: ast_expr2.fl
 else
 ast_expr2f.c:
 endif
 	$(ECHO_PREFIX) echo "   [FLEX] $< -> $@"
-	$(CMD_PREFIX) flex -o $@ ast_expr2.fl # moved the correction of yyfree into the flex input file itself.
+	$(CMD_PREFIX) $(FLEX) -o $@ ast_expr2.fl # moved the correction of yyfree into the flex input file itself.
 	$(CMD_PREFIX) sed 's@#if __STDC_VERSION__ >= 199901L@#if !defined __STDC_VERSION__ || __STDC_VERSION__ >= 199901L@' ast_expr2f.c > zz
 	$(CMD_PREFIX) mv zz ast_expr2f.c
 
