Restore FreeBSD to able-to-compile-ish-mode
git-svn-id: http://svn.asterisk.org/svn/asterisk/branches/1.4@242852 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/pbx/Makefile
+++ b/pbx/Makefile
@@ -44,7 +44,7 @@ ael/ael.tab.o ael/ael_lex.o: _ASTCFLAGS+=$(MENUSELECT_OPTS_pbx_ael:%=-D%) $(fore
 
 $(if $(filter pbx_ael,$(EMBEDDED_MODS)),modules.link,pbx_ael.so): ael/ael.tab.o ael/ael_lex.o
 
-ifneq ($(FLEX),:)
+ifneq ($(and $(findstring bison,$(BISON)),$(findstring flex,$(FLEX))),)
 ael/ael_lex.c: ael/ael.flex
 else
 ael/ael_lex.c:
@@ -53,7 +53,7 @@ endif
 	$(CMD_PREFIX) (cd ael; $(FLEX) ael.flex; sed -i -e "/begin standard C headers/i#include \"asterisk.h\"" ael_lex.c)
 	$(CMD_PREFIX) (cd ael; sed 's@#if __STDC_VERSION__ >= 199901L@#if !defined __STDC_VERSION__ || __STDC_VERSION__ >= 199901L@' ael_lex.c > zz; mv zz ael_lex.c)
 
-ifneq ($(BISON),:)
+ifneq ($(and $(findstring bison,$(BISON)),$(findstring flex,$(FLEX))),)
 ael/ael.tab.c ael/ael.tab.h: ael/ael.y
 else
 ael/ael.tab.c ael/ael.tab.h:
