--- a/main/Makefile
+++ b/main/Makefile
@@ -95,7 +95,7 @@ editline/libedit.a:
 db1-ast/libdb1.a:
 	_ASTCFLAGS="$(_ASTCFLAGS)" ASTCFLAGS="$(ASTCFLAGS) -Wno-strict-aliasing" $(MAKE) -C db1-ast libdb1.a
 
-ifneq ($(BISON),:)
+ifneq ($(and $(findstring bison,$(BISON)),$(findstring flex,$(FLEX))),)
 ast_expr2.c ast_expr2.h: ast_expr2.y
 else
 ast_expr2.c ast_expr2.h:
@@ -103,7 +103,7 @@ endif
 	$(ECHO_PREFIX) echo "   [BISON] $< -> $@"
 	$(CMD_PREFIX) $(BISON) -o $@ -d --name-prefix=ast_yy ast_expr2.y
 
-ifneq ($(FLEX),:)
+ifneq ($(and $(findstring bison,$(BISON)),$(findstring flex,$(FLEX))),)
 ast_expr2f.c: ast_expr2.fl
 else
 ast_expr2f.c:
