Solaris doesn't like outputting a NULL to a %s in format strings.
Detect all platforms that don't like that, either, and ensure that when documentation is
missing, we pass a non-NULL pointer when outputting the corresponding documentation.

(closes issue #16689)
 Reported by: bklang
 Patches: 
       20100209__issue16689__with_tests.diff.txt uploaded by tilghman (license 14)
 
Review: https://reviewboard.asterisk.org/r/497/


git-svn-id: http://svn.asterisk.org/svn/asterisk/trunk@246030 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/include/asterisk/autoconfig.h.in
+++ b/include/asterisk/autoconfig.h.in
@@ -591,6 +591,9 @@
 /* Define to 1 if you have the `ntohll' function. */
 #undef HAVE_NTOHLL
 
+/* Define to 1 if your C library can safely print NULL to string formats. */
+#undef HAVE_NULLSAFE_PRINTF
+
 /* Define to 1 if your ODBC library has wide (Unicode) types. */
 #undef HAVE_ODBC_WCHAR
 
