Eliminate remaining libedit warnings (shown in bamboo)
git-svn-id: http://svn.asterisk.org/svn/asterisk/trunk@250303 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/main/editline/Makefile.in
+++ b/main/editline/Makefile.in
@@ -2,6 +2,8 @@
 # Generic Makefile for libedit.
 #
 
+GREP=@GREP@
+
 OSTYPE=$(shell uname -s)
 define cyg_subst_sys
 	if uname -s | ${GREP} -qi cygwin; then \
