--- a/main/editline/configure.in
+++ b/main/editline/configure.in
@@ -77,6 +77,7 @@ esac
 AC_PROG_INSTALL
 AC_PROG_RANLIB
 AC_PATH_PROG(AR, ar, , $PATH)
+AC_PROG_GREP
 
 dnl Search for termcap access routines in termcap, tinfo, curses, and ncurses.
 AC_CHECK_LIB(termcap, tgetent, , \
