Change needed to make Mac OS X 10.6 happy
git-svn-id: http://svn.asterisk.org/svn/asterisk/trunk@251262 f38db490-d61c-443f-a65b-d21fe96a405b

--- a/include/asterisk/autoconfig.h.in
+++ b/include/asterisk/autoconfig.h.in
@@ -425,6 +425,12 @@
 /* Define to the version of the Jack Audio Connection Kit library. */
 #undef HAVE_JACK_VERSION
 
+/* Define to 1 if you have the kqueue support library. */
+#undef HAVE_KQUEUE
+
+/* Define to the version of the kqueue support library. */
+#undef HAVE_KQUEUE_VERSION
+
 /* Define to 1 if you have the OpenLDAP library. */
 #undef HAVE_LDAP
 
